--- a/packages/gatsby-documentation/src/pages/how-to.mdx
+++ b/packages/gatsby-documentation/src/pages/how-to.mdx
@@ -49,6 +49,10 @@ Here is how you should add documentation for React Components for Formation. <br
       onCancel: PropTypes.func
     };
   ```
+
+  It will look like this on your page once you add these.
+
+  ![proptypes](../images/proptypes.png "PropType Image")
 ---
 ### Adding Document Pages
 All our documentation should be added to our `src/pages` folder.
