add github GraphQL api query

--- a/packages/gatsby-documentation/src/pages/how-to.mdx
+++ b/packages/gatsby-documentation/src/pages/how-to.mdx
@@ -69,3 +69,7 @@ All our documentation should be added to our `src/pages` folder.
   ```
 
 This is the only requirements you need to setup your document pages.
+
+### GraphQl Sample Reference
+
+https://www.gatsbyjs.org/docs/graphql-reference/
