edited the how to file

--- a/packages/documentation/src/pages/how-to.mdx
+++ b/packages/documentation/src/pages/how-to.mdx
@@ -4,37 +4,40 @@ title: How to Add Documents
 ## How to Add Documents
 This is the process of how you should add new pages and documents to this website.
 
-### Adding React Component documentation
-Here is how you should add documentation for React Components for Formation. <br />
-***Note: An example .mdx can be found at formation-react/src/components/AcceptTermsPrompt***
+### MDX Format
+We will be using the .mdx format to create our documents.
+MDX is a format that lets you seamlessly use JSX in your Markdown documents.
+You can import components, like interactive charts or notifs, and export metadata.
+This makes writing long-form content with components a blast 🚀
 
-- Create a .mdx file in the `formation-react/src/components` folder.
-- Name it the same name as your React Component.
-- Add the required frontmatter at the top of the page
+[https://mdxjs.com/](https://mdxjs.com/)
+
+### Adding React Component documentation
+Adding React Components documentation in Formation.
+
+- **Take a look at the example MDX file at formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx.
+  You can use this as a starter**
+
+- **Create a .mdx file the same name as your component in the `formation-react/src/components` folder, adjacent to your component.**
+    ```
+    - components
+      - YourComponent.js
+      - YourComponent.mdx
+    ```
+- **Add the required frontmatter at the top of the page**
   ```
     ---
     title: AcceptTermsPrompt
     name: AcceptTermsPrompt
     ---
   ```
-- Add descriptions to your PropTypes in your Component files
+- **Add descriptions to your PropTypes in your Component files**
 
-  We need to convert the propType notes to jsDoc format.
-  This will not show up in the propTypes definitions in your .mdx file if you
+  We need to convert the propType comments to jsDoc format.
+  This will not show up in the propTypes definitions on your page if you
   don't have it in a jsDoc format.
 
-  Here is an examples:
-
-  Current code:
-  ```javascript
-    YourComponent.propTypes = {
-      /* content shown as the actual terms and conditions */
-      user: PropTypes.object,
-
-      /* cancel button click handler */
-      onCancel: PropTypes.func
-    };
-  ```
+  Here is an examples of how it should look:
 
   Changed code:
   ```javascript
@@ -50,16 +53,24 @@ Here is how you should add documentation for React Components for Formation. <br
     };
   ```
 
-  It will look like this on your page once you add these.
+  It will look like this on the page.
 
   ![proptypes](../images/proptypes.png "PropType Image")
----
-### Adding Document Pages
-All our documentation should be added to our `src/pages` folder.
 
-- Create a .mdx file
-- Add the required frontmatter at the top of the page. You will need this if you
-  want it to display in the sidebar.
+- **Once this is all setup you can start adding your React Component and markdown to your file.**
+- **Start gatsby**
+    ```
+    yarn develop
+    ```
+- **You should be able to see your component in the sidebar or go to the url.**
+    ```
+    http://localhost:8000/yourcomponentnamelowercase
+    ```
+### Adding Document Pages
+
+- **Create a .mdx file in `src/pages`**
+- **Add the required frontmatter at the top of the page. You will need this if you
+  want it to display in the sidebar.**
 
   ```markdown
     // Your .mdx page
@@ -67,5 +78,5 @@ All our documentation should be added to our `src/pages` folder.
     title: How to Add Documents
     ---
   ```
-
-This is the only requirements you need to setup your document pages.
+- **You have the option to create React Components and add them to the MDX file.
+  React components for pages should be located in src/components**
