fix route for external pages

--- a/packages/documentation/src/pages/how-to.mdx
+++ b/packages/documentation/src/pages/how-to.mdx
@@ -84,3 +84,7 @@ Adding React Components documentation in Formation.
   ### GraphQl Sample Reference
 
   https://www.gatsbyjs.org/docs/graphql-reference/
+
+  ### Github API GraphQL Explorer
+
+  https://developer.github.com/v4/explorer/
