--- a/packages/formation-react/src/components/ErrorableDate/ErrorableDate.mdx
+++ b/packages/formation-react/src/components/ErrorableDate/ErrorableDate.mdx
@@ -34,7 +34,6 @@ this.state = {
 import ErrorableDate from '@department-of-veterans-affairs/formation-react/ErrorableDate'
 
 <ErrorableDate
-  label={props.label}
   onValueChange={date => this.setState({ date })}
   required={true}
   label='Please tell us a date'
@@ -71,7 +70,6 @@ export class RenderedComponent extends React.Component {
     return (
       <div className="rendered-component">
         <ErrorableDate
-          label={this.props.label}
           onValueChange={(date) => this.setState({date})}
           required={true}
           label='Please tell us a date'
@@ -85,6 +83,4 @@ export class RenderedComponent extends React.Component {
   }
 }
 
-<RenderedComponent
-  label="Please tell us a date"
-/>
+<RenderedComponent />
