fix line on diagram

--- a/packages/documentation/src/pages/when-to-use-usfs.mdx
+++ b/packages/documentation/src/pages/when-to-use-usfs.mdx
@@ -9,7 +9,7 @@ The US Forms System provides a simple way to create a consistent form experience
 ```mermaid
 graph LR
     A(Introduction Page) --> B(Form Pages Start)
-    B -- Form Pages .-> C(Review Page)
+    B -. Form Pages .-> C(Review Page)
     C -- Submission --> D(Confirmation Page)
 ```
 
