--- a/packages/documentation/src/pages/getting-started/how-to.mdx
+++ b/packages/documentation/src/pages/getting-started/how-to.mdx
@@ -4,6 +4,14 @@ title: How to Add Documents
 ## How to Add Documents
 This is the process of how you should add new pages and documents to this website.
 
+```mermaid
+graph LR
+    A[Square Rect] -- Link text --> B((Circle))
+    A --> C(Round Rect)
+    B --> D{Rhombus}
+    C --> D
+```
+
 ### MDX Format
 We will be using the .mdx format to create our documents.
 MDX is a format that lets you seamlessly use JSX in your Markdown documents.
