--- a/packages/documentation/src/pages/getting-started/add-graphs-to-mdx.mdx
+++ b/packages/documentation/src/pages/getting-started/add-graphs-to-mdx.mdx
@@ -2,13 +2,14 @@
 title: Add Graphs to MDX
 ---
 
+## Add Graphs to MDX
+
 ### Mermaid Library
-To generator graphs in MDX files, we need to use the mermaid library.
-We are using [gatsby-remark-graph](https://github.com/konsumer/gatsby-remark-graph) to do this. We are limited to only using this with .md files and it will not work .mdx files. It might be possible to make this work with .mdx files in the future but it might take some time to implement.
+To generator graphs in MDX files, we need to use the [mermaid](https://mermaidjs.github.io/) library.
+We forked the [gatsby-remark-graph](https://github.com/konsumer/gatsby-remark-graph) plugin and modified it to work with MDX files.
+You can see the contents of the modified plugin in **/plugins/remarks/gatsby-remark-mdx-mermaid/**
 
-[https://mermaidjs.github.io/](https://mermaidjs.github.io/)
-
-This current file (src/pages/getting-started/markdown-mermaid-graph) is an example of how to implement it.
+This current file (src/pages/getting-started/add-graphs-to-mdx.mdx) is an example of how to implement graphs in MDX.
 
 ### Example code
 **Markdown**
