Add new tasks pages

--- a/packages/documentation/src/pages/getting-started/common-tasks/external-doc-page.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/external-doc-page.mdx
@@ -43,7 +43,7 @@ department-of-veterans-affairs/vets.gov-team/Work Practices/Accessing-Staging.md
 
 ***Note***: The file directory is not the url but the actual directory.
 Here is an example of what the file directory should look like:
-![github file directory](../images/github-file-directory.png)
+![github file directory](../../../images/github-file-directory.png)
 ---
 
 **Here is how to use the utility functions:**
