--- a/packages/documentation/src/pages/getting-started/add-graphs-to-mdx.mdx
+++ b/packages/documentation/src/pages/getting-started/add-graphs-to-mdx.mdx
@@ -5,7 +5,7 @@ title: Add Graphs to MDX
 ## Add Graphs to MDX
 
 ### Mermaid Library
-To generator graphs in MDX files, we need to use the [mermaid](https://mermaidjs.github.io/) library.
+To generate graphs in MDX files, we need to use the [mermaid](https://mermaidjs.github.io/) library.
 We forked the [gatsby-remark-graph](https://github.com/konsumer/gatsby-remark-graph) plugin and modified it to work with MDX files.
 You can see the contents of the modified plugin in **/plugins/remarks/gatsby-remark-mdx-mermaid/**
 
