add mermaid cli functionality

--- a/packages/documentation/src/pages/getting-started/common-tasks/doc-page.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/doc-page.mdx
@@ -61,7 +61,7 @@ Adding React Components documentation in Formation.
 
   It will look like this on the page.
 
-  ![proptypes](../../images/proptypes.png "PropType Image")
+  ![proptypes](../../../images/proptypes.png "PropType Image")
 
 - **Once this is all setup you can start adding your React Component and markdown to your file.**
 - **Start gatsby**
