--- a/packages/documentation/src/pages/index.mdx
+++ b/packages/documentation/src/pages/index.mdx
@@ -1,7 +1,12 @@
 ---
-title: This is the index
+title: Veteran Facing Services client application documentation
 ---
 
-import IndexPage from '../components/indexPage'
+# Veteran Facing Services client application documentation
 
-<IndexPage />
+Welcome! This site will help you get set up to work on the front end of VA.gov.
+
+- If you're looking to get your environment set up, visit our [Getting Started](getting-started) section.
+- If you're interested in the architecture of VA.gov and how it works, see [Architecture](architecture).
+- For information about building forms on VA.gov, visit the [Forms](forms) section.
+-For all other information about the VFS platform (including Formation React components), visit the [Platform](platform) section.
