--- a/packages/documentation/src/pages/getting-started/bundles-and-code-organization.mdx
+++ b/packages/documentation/src/pages/getting-started/bundles-and-code-organization.mdx
@@ -78,7 +78,7 @@
   - static-pages.entry.js
     - included on all non-react pages
     - e.g. https://www.va.gov
-  - gi.entry.js -
+  - gi.entry.js
     - stand alone react app
     - https://www.va.gov/gi-bill-comparison-tool
   - pre-need.entry
