--- a/packages/documentation/src/pages/getting-started/bundles-and-code-organization.mdx
+++ b/packages/documentation/src/pages/getting-started/bundles-and-code-organization.mdx
@@ -26,9 +26,9 @@
   - `app-list.sh` - bash script that outputs a list of the applications in vets-website
   - `build.js` - imports and runs build script in src/site/stages/build
   - `csv-path-builder.js` - TODO
-  - `heroku-postbuild.sh` - TODO - content deploy to heroku
+  - `heroku-postbuild.sh` - static content builder used by Heroku when a new branch is pushed
   - `mocha.js` - unit test runner and watch task
-  - `prearchive.js` - imports and run prearchive in src/site/stages/prearchive TODO
+  - `prearchive.js` - updates paths to js, css, and image assets to point to S3 asset bucket
   - `prebuild.js` - npm prebuild script that checks node version and install precommit hooks
   - `preview.js` - metalsmith build script for drupal preview
   - `reset-environment.js` - installs yarn and cleans up node_modules- used by build process
@@ -43,8 +43,8 @@
   - `watch.js` - watch task for unit tests (proof of concept)
 - `/src` - source files for vets-website web applications
   - `/applications` - application specific code that's into -entry.js files
-  - `/platform` - shared code that's bundled into vendor.js, injected directly into the site, or used for testing
-  - `/site` - build specific code including templates used for translating content from drupal CMS for the metalsmith build process
+  - `/platform` - shared code that's includes polyfilles, code thats injected directly into the site, or used for testing
+  - `/site` - Metalsmith pipeline code and templates used to generate static content pages from Drupal api or Markdown files
 - runtime configs used locally and in CI for builders, dependency managers, linters, transcoders, and source control
   - babel: `.bablerc`
   - docker: `.dockerignore`, `Dockerfile`, `docker-compose.yml`
