--- a/packages/documentation/src/pages/architecture/teamsite.mdx
+++ b/packages/documentation/src/pages/architecture/teamsite.mdx
@@ -74,7 +74,7 @@ The default behavior for https://staging.va.gov/health is to load the production
 The injection script will support any of [these](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/site/constants/environments.js) environment names set as the `targetEnvironment`.
 
 Caveats:
-- Style node deletions will prompt a rebuilding of the CSSOM but removing script nodes doesn't undo any JS that was run before the node was removed. For most cases this should not impact testing as the application specific code doesn't run but JS that is executed before the application (e.g. polyfills) will always run the production code first.
+- Style node deletions will prompt a rebuilding of the CSSOM but removing script nodes doesn't undo any JS that was run before the JS node was removed. For most cases this should not impact testing as the application specific code doesn't run but JS that is executed before the application (e.g. polyfills) will always run the production code first.
 
 ## Charles Proxy
 You can also use an application called Charles Proxy to map the `proxy-rewrite` bundles of TeamSite pages to your local machine. This way you can navigate directly to `https://www.va.gov/health/` and when the request for the production bundle of `proxy-rewrite` is sent, Charles will have overridden that file to instead be served locally. Instructions to set this up are located here, https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Engineering/Teamsite.md.
